--- a/T4NG.Generator/T4NG.Generator.csproj
+++ b/T4NG.Generator/T4NG.Generator.csproj
@@ -68,14 +68,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="config.json" />
     <None Include="Generator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Generator.txt</LastGenOutput>
+      <FormatOutput>True</FormatOutput>
     </None>
     <None Include="packages.config" />
+    <None Include="ProcessTemplate.tt" />
+    <None Include="Templates\Entity.tt.include">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Entity.tt.txt</LastGenOutput>
+      <LastOutputs>.\Entity.tt.txt</LastOutputs>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -91,6 +99,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Generator.tt</DependentUpon>
+    </Content>
+    <Content Include="Templates\Entity.tt.txt">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Entity.tt.include</DependentUpon>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
